<resources>
    <string name="app_name">k22411caSampleProject</string>
    <string name="title_login_username">User name:</string>
    <string name="title_login_username_hint">Enter your username...</string>
    <string name="title_login_password">Password:</string>
    <string name="title_login_password_hint">Enter your password...</string>
    <string name="title_login_save_infor">Save login information</string>
    <string name="title_login_button_login">Login</string>
    <string name="title_confirm_exit_title">Confirm Exit</string>
    <string name="title_confirm_exit_message">Are you sure you want to exit?</string>
    <string name="title_confirm_exit_cancel">CANCEL</string>
    <string name="title_confirm_exit_ok">YES</string>
    <string name="title_main_employee">Employee</string>
    <string name="title_main_customer">Customer</string>

    <string name="title_employee_healthcare">Healthcare</string>
    <string name="title_employee_salary">Salary</string>
    <string name="title_employee_permission">Permission</string>
    <string name="title_activity_employee_healthcare">Employee Healthcare</string>
    <string name="title_height">Height:</string>
    <string name="title_weight">Weight:</string>
    <string name="title_calculate">Calculate</string>
    <string name="title_clear">Clear</string>
    <string name="title_close">Close</string>
    <string name="title_main_product">Product</string>
    <string name="title_main_category">Category</string>
    <string name="title_main_product_advance">Advanced Product</string>
    <string name="title_create_new_customer">New Customer</string>
    <string name="title_broadcast_advertising">Broadcast advertising</string>
    <string name="title_help">Help</string>
    <string name="title_customer_detail">Customer Details</string>
    <string name="title_customer_id">Customer ID:</string>
    <string name="title_customer_name">Customer Name:</string>
    <string name="title_customer_email">Customer Email</string>
    <string name="title_cutomer_phone">Customer phone:</string>
    <string name="title_new">New</string>
    <string name="title_save">Save</string>
    <string name="title_remove">Remove</string>
    <string name="title_add_product">Add Product</string>
    <string name="title_manage_categories">Manage Categories</string>
    <string name="title_product_help">Help</string>
    <string name="title_product_detail">Product Detail</string>
    <string name="title_product_id">Product ID</string>
    <string name="title_product_name">Product Name</string>
    <string name="title_product_quantity">Quantity</string>
    <string name="title_product_price">Price</string>
    <string name="title_product_category">Category ID</string>
    <string name="title_product_image_id">Image ID</string>
    <string name="title_payment_method">Payment Method</string>
    <string name="title_order">Order</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_phone">Phone:</string>
    <string name="title_bodytext">Body:</string>

    <!-- Menu -->
    <string name="menu_all">Tất cả</string>
    <string name="menu_viettel">Viettel</string>
    <string name="menu_mobifone">Mobifone</string>
    <string name="menu_vinaphone">Vinaphone</string>
    <string name="menu_vietnamobile">Vietnamobile</string>
</resources>